php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44533 floatval() issues E_NOTICE "non well formed numeric value"
Submitted: 2008-03-25 18:41 UTC Modified: 2008-03-29 22:02 UTC
From: cschneid at cschneid dot com Assigned:
Status: Closed Package: *Math Functions
PHP Version: 6CVS-2008-03-25 (CVS) OS:
Private report: No CVE-ID: None
 [2008-03-25 18:41 UTC] cschneid at cschneid dot com
Description:
------------
floatval("4foo"); issues E_NOTICE "non well formed numeric value"


Reproduce code:
---------------
php -d error_reporting=65535 -r 'var_dump(floatval("4foo"));'


Expected result:
----------------
float(4)

Actual result:
--------------
Notice: A non well formed numeric value encountered in Command line code on line 1
float(4)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-03-29 22:02 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 22 07:00:01 2026 UTC