- Fixed bug #44533 (floatval() issues E_NOTICE "non well formed numeric value") (Keep the old behavior, as other related functions)